--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ body {
 }
 
 :root {
-    --btn-bg-color: #6E9C9F;
+    --btnB-bg-color: #6E9C9F;
+	--btnT-bg-color: #fff;
+	--white-color: #fff;
 	--menu-color: #6E9C9F;
 }
 
@@ -33,8 +35,15 @@ button:focus {
 	outline: none;
 	border: none;
     transition: all 0.5s ease;
+	cursor: pointer;
 }
-
+input {
+	width: 350px;
+	height: 40px;
+	font-size: 17px;
+	line-height: 140%;
+	letter-spacing: 0.02em
+}
 h1, h2, h3, h4, h5, h6 {
     padding: 0;
 	margin: 0;
@@ -57,36 +66,56 @@ ul, li {
 a {
     color: #000000;
 	text-decoration: none;
-    transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
 
 a:hover {
-	color: #1b1c1e;
     transition: all 0.5s ease;
 }
 
-.btn {
-	padding: 22px 50px;
-	background-color: var(--btn-bg-color);
-	color: #fff;
-	font-size: 17px;
-	font-weight: 400;
-	display: block;
-	transition: all 0.5s ease;
-	text-align: center;
-    border-radius: 0;
-}
-button {
-	cursor: pointer;
+a.disabled {
+    pointer-events: none;
+    cursor: default;
+    color: #919191;
 }
 
-.btn:hover {
+.btnBac {
+	padding: 22px 50px;
+	background-color: var(--btnB-bg-color);
+	color: var(--white-color);
+	display: block;
+	text-align: center;
+	font-size: 17px;
+	line-height: 140%;
+	letter-spacing: 0.02em;
+}
+.btnTransparent {
+	padding: 22px 50px;
+	background-color: var(--btnT-bg-color);
+	color: var(--menu-color);
+	border: 1px solid #6E9C9F;
+	display: block;
+	text-align: center;
+	font-size: 17px;
+	line-height: 140%;
+	letter-spacing: 0.02em;
+}
+.btnTransparent:hover {
+	background: var(--btnB-bg-color);
+	color: var(--white-color);
+	border: 1px solid #6E9C9F;
+}
+.btnTransparent:active {
+	background: #509498;;
+	box-shadow: none
+}
+
+.btnBac:hover {
 	background: #509498;
 	color: #fff;
-	box-shadow: 0 8px 20px rgb(37 0 249 / 25%);
 }
 
-.btn:active {
+.btnBac:active {
 	background: #509498;;
 	box-shadow: none
 }
@@ -95,30 +124,47 @@ button {
 	max-width: 100%;
 }
 
+section {
+	margin-bottom: 130px;
+}
+
+.header__menu_wrapper.active {
+    position: fixed;
+    padding: 35px 50px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.05);
+    animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
+    -webkit-box-shadow: 0 10px 15px rgb(25 25 25 / 10%);
+	transition: all 0.5s ease 0s;
+}
+
+.headerOneItem {
+	margin: 110px 0 42px;
+}
 /* Header */
 
 .header {
 	position: relative;
-    padding-top: 51px;
+    padding: 51px 0 60px;
 }
 .background__header {
 	position: absolute;
 	top: 0;
 	right: 0;
 	width: 44%;
-	height: 108%;
+	height: 100%;
 	background: #F1EADC;
 	z-index: -1;
-}
-.header__wrapper {
 }
 .header__menu_wrapper {
     display: flex;
     justify-content: space-between;
-}
-.header__menu_links_wrap {
-}
-.header__menu_links_wrap {
+	transition: none;
 }
 .header__menu_list {
     display: flex;
@@ -127,6 +173,7 @@ button {
 .header__menu_item .header__menu_link {
 	display: inline-block;
 	text-align: center;
+	font-size: 15px;
 }
 .header__menu_link-w-700 {
 	font-weight: 700;
@@ -158,8 +205,6 @@ button {
 	background: none;
 }
 .header__menu_contact_icon-tel {
-}
-.header__menu_contact_icon-tel {
 	background-image: url(../img/tel-icon.svg);
 	width: 27px;
 	height: 27px;
@@ -171,27 +216,18 @@ button {
 	 height: 27px;
 }
 
-.header__menu_contact_link {
-}
-.header__menu_contact_basket_wrap {
-}
-.header__menu_contact_basket-link {
-}
-.header__menu_contact_basket-img {
-}
-
 /* Modal */
 
-.header__modal-window_wrapper {
+#modalWindow {
 	display: none;
 	position: absolute;
 	z-index: 10;
     transition: all 0.5s ease-in 0s;
 }
-.header__modal-window_wrapper.active {
+#modalWindow.active {
 	display: block;
 }
-.header__overlay-modal {
+#header__overlay-modal {
 	position: fixed;
     top: 0;
     left: 0;
@@ -212,6 +248,9 @@ button {
     z-index: 5;
     background-color: #ffffff;
     box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.09);
+}
+.header__modal-window-set-close {
+	margin: 0 auto;
 }
 .header__modal-window_form_btn-close {
 	position: absolute;
@@ -240,23 +279,19 @@ button {
 .header__modal-window_form-btn {
 	width: auto;
 }
-.header__modal-window-set {
+#modalWindowSet {
 	display: none;
     padding: 70px;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: auto;
-    height: auto;
-    z-index: 2;
+    z-index: 8;
     background-color: #ffffff;
     box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.09);
-    background: #fff;
-    flex-direction: column;
-    align-items: center;
+	transition: all 0.5s ease-in 0s;
 }
-.header__modal-window-set.active {
+#modalWindowSet.active {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -286,12 +321,12 @@ button {
 	margin-top: 186px;
 	width: 563px;
 }
-.header__offer {
-}
-.header__offer_slider {
+.headerSlideOffer {
+	display: none;
 	margin-bottom: 52px;
 }
-.active {
+.headerSlideOffer.active {
+	display: block;
 }
 .header__offer_title {
 	font-size: 55px;
@@ -316,33 +351,36 @@ button {
 .header__offer_btn-arrow-icon {
 	padding: 20px 27px;
 }
-.header__offer_btn-link {
-}
-
-.scrollbars {
+.header__scrollbars {
     display: flex;
+	gap: 12px;
     justify-content: center;
 	margin-top: 126px;
     margin-left: 286px;
 }
 
-.scrollbar {
+.header__scrollbar {
     background: #D1D1D1;
     width: 30px;
     height: 4px;
-    margin-right: 12px;
     cursor: pointer;
 }
 
-.scrollbar.active {
+.header__scrollbar.active {
     background: #000000;
 }
 .header__offer-img_wrapper {
 	position: relative;
-}
-.header__offer-img-home {
 	margin-top: 41px;
 }
+
+.headerSlideImg {
+	display: none;
+}
+.headerSlideImg.active {
+	display: block;
+}
+
 .header__offer-img-two {
 	position: absolute;
     top: 123px;
@@ -352,4 +390,689 @@ button {
 	position: absolute;
 	left: -130px;
 	bottom: -60px;
+}
+
+.header__title-link_wrapper {
+	margin-top: 190px;
+	margin-bottom: 154px;
+}
+.header__title_wrapper {
+	margin-bottom: 26px;
+}
+.header__title {
+	font-size: 55px;
+}
+.header__link_wrapper {
+	display: flex;
+    gap: 13px;
+    align-items: center;
+}
+.border-hyphen {
+	width: 13px;
+	border: 1px solid black;
+}
+
+/* New Collection */
+
+.newCollection {
+	margin-top: 130px;
+}
+.newCollection__title_wrapper {
+	margin-bottom: 92px;
+}
+.newCollection__title {
+	font-size: 40px;
+}
+.newCollection__carts_wrapper {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: auto;
+	gap: 30px;
+	margin-bottom: 65px;
+}
+.newCollection__cart_wrapper {
+	text-align: center;
+}
+.newCollection__cart-img_wrap {
+	position: relative;
+}
+.newCollection__cart-img {
+	display: flex;
+}
+.newCollection__cart-img-overlay {
+	position: absolute;
+	top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    background: url(../img/arrow-hover.svg) no-repeat center center, rgba(110, 156, 159, 0.64);
+}
+.newCollection__cart-img-overlay:hover {
+	opacity: 1;
+}
+.newCollection__cart_title {
+	font-size: 20px;
+	margin-top: 24px;
+	margin-bottom: 7px;
+}
+.newCollection__cart-price-discount {
+	text-decoration-line: line-through;
+	color: #9C9C9C;
+	font-size: 15px;
+	margin-right: 10px;
+}
+.newCollection__cart-price {
+	font-size: 15px;
+	color: #998E78;
+}
+.newCollection__link_wrapper {
+	display: flex;
+  	justify-content: center;
+}
+
+/* Important */
+
+.important__title_wrapper {
+	margin-bottom: 92px;
+}
+.important__title {
+	font-size: 40px;
+}
+.important__carts_wrapper {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr;
+	gap: 30px;
+}
+.important__cart-offer_wrapper {
+	width: 305px;
+}
+.important__cart_title {
+	margin-top: 37px;
+	margin-bottom: 24px;
+	font-size: 25px;
+}
+.important__cart_text {
+	font-weight: 500;
+}
+
+/* Dream Team */
+
+.dreamTeam__flex_wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.dreamTeam__title {
+	font-size: 40px;
+	margin-bottom: 92px;
+}
+.dreamTeam__slides_wrapper {
+	position: relative;
+}
+.dreamTeam__slide {
+	display: none;
+}
+.dreamTeam__slide.active {
+	position: relative;
+	display: block;
+}
+.dreamTeam__scrollbars {
+	position: absolute;
+    display: flex;
+	justify-content: center;
+	gap: 12px;
+	bottom: 61px;
+	left: 0;
+	right: 0;
+}
+.dreamTeam__scrollbar {
+    background: rgba(255, 255, 255, 0.36);;
+    width: 30px;
+    height: 4px;
+    cursor: pointer;
+}
+.dreamTeam__scrollbar.active {
+    background: #FFFFFF;
+}
+.dreamTeam__nav-arrow_wrapper {
+	display: flex;
+    align-items: center;
+}
+.dreamTeam__nav-arrow-prev {
+	position: absolute;
+	left: -61px;
+	top: 0;
+	bottom: 0;
+	background: none;
+}
+.dreamTeam__nav-arrow-next {
+	position: absolute;
+	right: -59px;
+	top: 0;
+	bottom: 0;
+	background: none;
+}
+
+.dreamTeam__offer_wrapper {
+	width: 255px;
+	display: flex;
+	flex-direction: column;
+    gap: 28px;
+}
+.dreamTeam__offer_title {
+	font-size: 25px;
+}
+.dreamTeam__offer_text {
+	font-weight: 500;
+}
+.dreamTeam__offer_link {
+	color: #6E9C9F;
+}
+.dreamTeam__offer_link:hover {
+	text-decoration: underline;
+}
+
+/* Footer */
+
+.footer {
+	background: #F1EADC;
+	padding: 101px 0;
+}
+.footer-flex__wrapper {
+	display: flex;
+	justify-content: space-between;
+}
+.footer__logo-icon_wrapper {
+	margin-bottom: 70px;
+}
+.footer__logo-offer_wrapper {
+	display: flex;
+    flex-direction: column;
+	gap: 6px;
+}
+.footer-menu__link-shop_wrapper {
+	margin-top: 39px;
+}
+.footer-menu__link-shop_item {
+	margin-bottom: 10px;
+}
+.footer-menu__link-shop_item:last-child {
+	margin-bottom: 0px;
+}
+.footer-menu__link-shop_link {
+	font-size: 13px;
+}
+.footer-menu__link-shop_link:hover {
+	color: #6E9C9F;
+}
+.footer__contact_wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	gap: 30px;
+}
+.footer__contact_tel {
+	margin-bottom: 9px;
+}
+.footer__contact-social_wrapper {
+	display: flex;
+	gap: 12px;
+}
+.footer__contacts_wrapper {
+    display: flex;
+    flex-direction: column;
+	align-items: flex-end;
+    gap: 9px;
+}
+
+/* productCard */
+
+.productCard__tabs_wrapper {
+	display: flex;
+    gap: 10px;
+	margin-bottom: 92px;
+}
+.productCard__tab {
+	font-weight: 500;
+	font-size: 17px;
+	line-height: 140%;
+	background: #FFFFFF;
+	letter-spacing: 0.02em;
+	border: 1px solid #000000;
+	padding: 19px 65px;
+}
+.productCard__tab:hover {
+	color: #fff;
+	background: #000000;
+	border: 1px solid #000000;
+	padding: 19px 65px;
+}
+.productCard__tab.active {
+	color: #fff;
+	background: #000000;
+	border: 1px solid #000000;
+	padding: 19px 65px;
+}
+.productCards {
+	gap: 65px 30px;
+}
+.productCard__quantity {
+	color: #808080;
+	margin-bottom: 65px;
+}
+.productCard__tabs-link_wrapper {
+	display: flex;
+	gap: 14px;
+	align-items: center;
+	justify-content: center;
+}
+.productCard__tab-link_btn {
+	font-weight: 500;
+	font-size: 17px;
+	line-height: 140%;
+	background: #FFFFFF;
+	letter-spacing: 0.02em;
+	border: 1px solid #000000;
+	padding: 9px 16px;
+}
+.productCard__tab-link_btn:hover {
+	color: #fff;
+	background: #000000;
+	border: 1px solid #000000;
+}
+.productCard__tab-link_btn.active {
+	color: #fff;
+	background: #000000;
+	border: 1px solid #000000;
+}
+
+/* cardProduct */
+
+.cardProductItem__flex-wrapper {
+	display: flex;
+	align-items: center;
+	gap: 74px;
+}
+.cardProductItem__img {
+	width: 536px;
+    height: 729px;
+    object-fit: cover;
+}
+.cardProductItem-offer_wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 59px;
+}
+.cardProductItem-offer__card-price_wrapper {
+	display: flex;
+    align-items: center;
+}
+.cardProductItem-offer__card-price-discount {
+	text-decoration-line: line-through;
+	color: #9C9C9C;
+	font-size: 30px;
+}
+.cardProductItem-offer__card-price {
+	font-size: 40px;
+	color: #998E78;
+	margin-right: 29px;
+}
+.cardProductItem-offer__size-btn_wrap {
+	display: flex;
+	gap: 14px;
+}
+.cardProductItem-offer__title {
+	margin-bottom: 34px;
+}
+.cardProductItem-offer__size-btn {
+	font-weight: 500;
+	width: 41px;
+	height: 41px;
+	background-color: #FFFFFF;
+	color: #000000;
+	border: 1px solid #000000;
+}
+.cardProductItem-offer__size-btn:hover {
+	background-color: #000000;
+	color: #FFFFFF;
+	border: 1px solid #000000;
+}
+.cardProductItem-offer__size-btn:active {
+	background-color: #000000;
+	color: #FFFFFF;
+	border: 1px solid #000000;
+}
+.cardProductItem-offer__size-btn.active {
+	background-color: #000000;
+	color: #FFFFFF;
+	border: 1px solid #000000;
+}
+.cardProductItem-offer__size-btn-color_wrap {
+	display: flex;
+	align-items: center;
+	gap: 14px;
+}
+.cardProductItem-offer__size-btn-color {
+	width: 41px;
+	height: 41px;
+	border-radius: 100px;
+}
+.cardProductItem-offer__size-btn-color.active {
+	border: 1px solid #000000;
+}
+.cardProductItem-offer__quantity_wrapper {
+	display: flex;
+	align-items: center;
+	gap: 11px;
+}
+.cardProductItem-offer__quantity_input {
+	width: 68px;
+    height: 68px;
+    text-align: center;
+	border: 1px solid #AFAFAF;
+}
+.cardProductItems__related-products_wrapper {
+	margin-top: 130px;
+}
+.cardProductItems__related-products_title {
+	font-size: 40px;
+	margin-bottom: 67px;
+}
+.cardProductItems__related-products_card_wrapper {
+	display: flex;
+	align-items: center;
+	gap: 30px;
+}
+
+/* About Products */
+
+.aboutProducts__flex_wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 130px;
+}
+.aboutProducts__card_wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+    gap: 94px;
+}
+.aboutProducts__cardOne_img_wrapper {
+	width: 442px;
+	height: 547px;
+}
+.aboutProducts__cardOne_img {
+	width: 442px;
+	height: 547px;
+	object-fit: none;
+}
+.aboutProducts__cardOne_offer_title {
+	font-size: 25px;
+	margin-bottom: 46px;
+}
+.aboutProducts__cardOne_offer_text {
+	font-weight: 500;
+
+}
+.aboutProducts__btn-link_wrapper {
+	display: flex;
+	justify-content: center;
+}
+
+/* Contacts */
+
+#map {
+	width: 100%;
+	height: 476px;
+	background: #DDDDDD;
+}
+.contacts__offer_wrapper {
+	display: flex;
+	align-items: center;
+	gap: 98px;
+}
+.contacts__offer_title {
+	margin-bottom: 19px;
+}
+.contacts__offer_link {
+	font-size: 20px;
+	font-weight: 500;
+}
+.contacts__form_wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 62px;
+}
+.contacts__form_title {
+	font-size: 25px;
+}
+.contacts__form-send {
+	width: 443px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	border: none;
+}
+.contacts__form-send_input {
+	height: 40px;
+	margin-bottom: 35px;
+	border: none;
+	border-bottom: 1px solid #000000;
+}
+.contacts__form-send-massange {
+	width: 443px;
+	max-width: 443px;
+	height: 134px;
+	font-family: 'Raleway';
+	font-weight: 500;
+	font-size: 17px;
+	line-height: 140%;
+	letter-spacing: 0.02em;
+	margin-bottom: 35px;
+	border: none;
+	border-bottom: 1px solid #000000;
+}
+.contacts__form_modal-set_title {
+	padding: 30px 76px;
+	background: #F1EADC;
+}
+.contacts__form_modal-set {
+	display: none;
+}
+.contacts__form_modal-set.active {
+	display: block;
+}
+
+/* Basket */
+
+.basketProduct__table {
+	width: 100%;
+	margin-bottom: 72px;
+	border-collapse: collapse;
+}
+.basketProduct__table_title-wrapper {
+	display: table-row;
+	border-bottom: 1px solid #CCCCCC;
+	text-align: left;
+}
+.basketProduct__table_title {
+	padding-bottom: 26px;
+	font-weight: 500;
+}
+tr.basketProduct__table_card-product_wrapper td {
+	padding-top: 49px;
+}
+.basketProduct__table_card-product-img_wrapper {
+	display: flex;
+	align-items: center;
+}
+.basketProduct__table_card-product_title-product_cross-img {
+	margin-right: 51px;
+}
+.basketProduct__table_card-product_img {
+	margin-right: 36px;
+	height: 179px;
+}
+.basketProduct__table_card-product_quanity_input {
+	width: 47px;
+	height: 47px;
+	border: 1px solid #AFAFAF;
+	text-align: center;
+}
+.basketProduct__btns_wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 88px;
+}
+.basketProduct__btn-coupon_wrapper {
+	display: flex;
+	align-items: center;
+	gap: 16px;
+}
+.basketProduct__btn-coupon-input {
+	width: 255px;
+	height: 68px;
+	border: none;
+	border-bottom: 1px solid #000000;
+}
+.basketProduct__total-price_wrapper {
+	margin-left: 50%;
+}
+.basketProduct__total-price-summary_wrapper {
+	margin-bottom: 20px;
+}
+.basketProduct__total-price-summary {
+	margin-right: 20px;
+	font-weight: 500;
+}
+.basketProduct__total-price-summaryPrice {
+	font-weight: 500;
+}
+.basketProduct__total-price-btn_flex-wrapper {
+	display: flex;
+	align-items: center;
+	gap: 15px;
+}
+.basketProduct__total-price-subtotal-wrapper {
+	padding: 16px 51px 17px 31px;
+	background: #F1EADC; 
+}
+.basketProduct__total-price-subtotal {
+	font-weight: 500;
+	font-size: 25px;
+	line-height: 140%;
+	letter-spacing: 0.02em;
+	margin-right: 69px;
+}
+.basketProduct__total-price-subtotal:last-child {
+	margin-right: 0;
+}
+
+/* Checkout */
+
+.checkout__flex-wrapper {
+	display: flex;
+	justify-content: space-between;
+}
+.checkout-form__flex-wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 35px;
+	margin-bottom: 81px;
+}
+.checkout-form__flex-wrapper:last-child {
+	margin-bottom: 0;
+	gap: 0;
+}
+.checkout-form__title {
+	font-size: 25px;
+	margin-bottom: 47px;
+}
+.checkout__input {
+	border: none;
+	border-bottom: 1px solid #000000;
+}
+.checkout__massange-form {
+	width: auto;
+}
+.checkout__order-total_wrapper {
+	margin-bottom: 145px;
+}
+.checkout__order {
+	padding-bottom: 30px;
+	padding-right: 73px;
+	font-weight: 500;
+	font-size: 20px;
+}
+.checkout__order:last-child {
+	padding-right: 0px;
+}
+.checkout__order_title {
+	font-weight: 500;
+	font-size: 20px;
+}
+.checkout__order_title-bcg {
+	padding: 15px 0 14px;
+}
+.checkout__order_bacg-pos {
+	position: relative;
+}
+.checkout__order_bacg {
+	background: #F1EADC;
+}
+.way-pay__radio-btn_list {
+	margin-bottom: 47px;
+}
+.way-pay__radio-btn_item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.way-pay__radio-btn_item input[type=radio] {
+    display: none;
+}
+.way-pay__radio-btn_item label {
+	display: inline-block;
+    cursor: pointer;
+    width: 22px;
+    height: 22px;
+    border: 1px solid #000000;
+    position: relative;
+    background: none;
+    user-select: none;
+    margin-right: 14px;
+}
+.way-pay__radio-btn_item input[type=radio]:checked + label {
+	background: url(../img/checkout.svg) no-repeat;
+    border: none;
+}
+
+/* Success */ 
+
+.success__flex-wrap {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.success-wrapper {
+	display: flex;
+	align-items: center;
+	gap: 32px;
+}
+.success__img {
+}
+.success__wrap-text {
+}
+.success__title {
+	margin-bottom: 17px;
+	font-size: 25px;
+}
+.success__text {
+	font-weight: 500;
+}
+.btnBac {
 }
